# aximo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml  docker-compose.yml  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  container.yml  image-security.yml  security.yml
badges/: coverage.json
config/: aximo.example.toml  aximo.local.toml
crates/aximo/: Cargo.toml
crates/aximo-audio/: Cargo.toml
crates/aximo-audio/src/: decode.rs  lib.rs  media_type.rs  normalize.rs
crates/aximo-audio/tests/: decode.rs  media_type.rs
crates/aximo-audio/tests/fixtures/: tone-16k-mono.flac  tone-16k-mono.m4a
crates/aximo-core/: Cargo.toml
crates/aximo-core/src/: lib.rs  realtime.rs  scheduler.rs  short_audio.rs
crates/aximo-core/tests/: realtime.rs  scheduler.rs
crates/aximo-inference/: Cargo.toml
crates/aximo-inference/src/: engine.rs  lib.rs  runtime.rs
crates/aximo-inference/tests/: runtime_loader.rs
crates/aximo/src/: app.rs  config.rs  docs.rs  engine_runtime.rs  inference_task.rs  lib.rs  main.rs  metrics.rs  runtime.rs  runtime_health.rs
crates/aximo/src/http/: capabilities.rs  health.rs  mod.rs  transcriptions.rs
crates/aximo/src/ws/: handler.rs  protocol.rs
crates/aximo/static/docs/: aximo-recorder.css  aximo-recorder.js  index.html
crates/aximo/tests/: blocking_inference.rs  capabilities_api.rs  config_inference.rs  docs_api.rs  health_api.rs  metrics_api.rs  realtime_protocol.rs  runtime_config.rs  transcriptions_api.rs  workspace_smoke.rs
deploy/kubernetes/: configmap.yaml  deployment.yaml  kustomization.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  service.yaml
docs/: architecture.md  benchmark-baselines.md  benchmarks.md  client-examples.md  deployment-security.md  kubernetes.md  model-licenses.md  publishing.md  realtime-protocol.md
docs/superpowers/plans/: 2026-04-22-aximo-stt-service.md  2026-04-24-api-operational-polish.md  2026-04-24-api-production-polish.md  2026-04-24-production-hardening-limits.md  2026-04-24-production-runtime-polish.md  2026-04-24-runtime-production-hardening.md
docs/superpowers/specs/: 2026-04-22-aximo-stt-design.md
scripts/: benchmark-api.sh  fetch-models.sh  generate-benchmark-fixtures.sh  render-benchmark-report.sh
