[workspace]
members = [
    "crates/aximo",
    "crates/aximo-audio",
    "crates/aximo-core",
    "crates/aximo-inference",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["ws"] }
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.24.0"
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
