[workspace]
members = [
    "crates/aximo",
    "crates/aximo-audio",
    "crates/aximo-core",
    "crates/aximo-inference",
]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/agent-axiom/aximo"
license = "MIT"
repository = "https://github.com/agent-axiom/aximo"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
aximo-audio = { path = "crates/aximo-audio", version = "0.1.0" }
aximo-core = { path = "crates/aximo-core", version = "0.1.0" }
aximo-inference = { path = "crates/aximo-inference", version = "0.1.0" }
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["ws"] }
futures-util = "0.3.31"
hound = "3.5.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.15.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.24.0"
toml = "0.8.19"
transcribe-rs = { version = "0.3", features = ["onnx"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "8.0.3", features = ["axum", "vendored"] }
