[workspace]
members = [
    "crates/aximo",
    "crates/aximo-audio",
    "crates/aximo-core",
    "crates/aximo-inference",
]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/agent-axiom/aximo"
license = "MIT"
repository = "https://github.com/agent-axiom/aximo"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
aximo-audio = { path = "crates/aximo-audio", version = "0.1.0" }
aximo-core = { path = "crates/aximo-core", version = "0.1.0" }
aximo-inference = { path = "crates/aximo-inference", version = "0.1.0" }
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"] }
futures-util = "0.3.32"
hound = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
symphonia = { version = "0.5.4", default-features = false, features = ["aac", "flac", "isomp4", "mp3", "pcm", "wav"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.29.0"
toml = "1.0"
transcribe-rs = { version = "0.3.11", features = ["onnx"] }
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
