[package]
name = "aximo"
description = "CPU-first STT microservice binary and HTTP API for local models."
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
aximo-core.workspace = true
aximo-inference.workspace = true
axum.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

[dev-dependencies]
tempfile.workspace = true
